# asynchronous-text-analyzer

./: .env  .gitignore  11docker-compose.yml11  Dockerfile  Makefile  README.md  build.sh  db.sql  docker-compose.yml  dump.rdb  pyproject.toml  requirements.txt
app/: broker_message.py  constants.py  create_table.py  creating_table.py  endpoint_uploading_and_sending.py  main.py  main_app.py  redis_server.py  result_endpoint.py  test.py
