[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["georg <georbearwolf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "0.104.1"
uvicorn = "0.24.0"
asyncio = "3.4.3"
aioredis = "2.0.1"
pydantic = "2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
