[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["georg <georbearwolf.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"
fastapi = "0.104.1"
uvicorn = "0.24.0"
asyncio = "3.4.3"
pydantic = "2.5.1"
redis = "5.0.1"
psycopg2 = "2.9.9"
postgres = "4.0"
python-dotenv = "1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
